[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Tyler <tgross@skyroad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
wasm-bindgen = "0.2"
rand = "0.7"
colored = "1.8"