[package]
name = "rust-wasm"
version = "0.1.0"
authors = ["Tyler <tgross@skyroad.com>"]
edition = "2018"
license = "MIT"
description = "A WASM test library of some Tempo functions"
repository = "https://github.com/milky2028/rust-wasm.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
wasm-bindgen = "0.2"